cambio de anchura

--- a/pitchman.html
+++ b/pitchman.html
@@ -13,11 +13,14 @@
         }
 
         .container {
-            width: 1920px;
+            
             height: 6625px;
             background: linear-gradient(to bottom, #ffffff, #cccccc);
             border: 2px solid #333;
             box-sizing: border-box;
+            width: 100%;  /* El contenedor ocupará el 100% del ancho disponible */
+            padding: 20px;  /* Opcional: para dar espacio interno */
+            
         }
 
         .header {
