--- a/pitchman.html
+++ b/pitchman.html
@@ -23,7 +23,22 @@
             
         }
 
-        
+        .header {
+            width: 100%;
+            height: 100px;
+            background-color: #222;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .content {
+            padding: 20px;
+        }
+
         .footer {
             position: absolute;
             bottom: 0;
