--- a/pitchman.html
+++ b/pitchman.html
@@ -33,6 +33,9 @@
             justify-content: center;
             font-size: 24px;
             font-weight: bold;
+            border-radius: 32px;
+            background-color: rgba(0, 0, 0, 0.5);
+            position: fixed;
         }
 
         .content {
