--- a/pitchman.html
+++ b/pitchman.html
@@ -50,6 +50,7 @@
             align-items: center;
             justify-content: center;
             font-size: 18px;
+            border-radius:  32px;
         }
     </style>
 </head>
